# Spark-Hack-Series-Nvidia-Acer-Antler-

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
app/: actions.ts  globals.css  layout.tsx  page.tsx
app/components/: Timeline.tsx
app/protected/: page.tsx
components/: camera-float.tsx  camera-modal.tsx  camera-popup.tsx  category-picker.tsx  chat-interface.tsx  event-feed.tsx  forecast-panel.tsx  header-auth.tsx  header-nav.tsx  home-link.tsx  nyc-map.tsx  risk-badge.tsx  risk-heatmap-map.tsx  time-slider.tsx  timestamp-list.tsx
lib/: lmstudio.ts  nyctmc.ts
lib/hooks/: useBrainHealth.ts  useCameras.ts  useCategories.ts  useForecastStats.ts  useHeatmap.ts  usePatrolRoutes.ts  useRiskStream.ts
lib/risk/: client.ts  tier.ts
lib/vlm/: index.ts  lmstudio-client.ts  nim-client.ts  shared.ts  (+1 more)
poi-brain/: .env.example  .gitignore  README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt
poi-brain/app/: __init__.py  config.py  main.py  schemas.py  state.py
poi-brain/app/pipeline/: camera_catalog.py  camera_poller.py  categories.py  device_probe.py  fuse_cudf.py  graph_cugraph.py  ingest.py  rapids_runtime.py  retrieval.py  risk_engine.py  solve_cuopt.py  train_cuml.py  train_torch.py
poi-brain/app/routers/: cameras.py  dispatch.py  frames.py  health.py  risk.py  stats.py
poi-brain/app/vlm/: __init__.py  nim_client.py
poi-brain/finetune/: README.md  example_data.jsonl  prepare_dataset.py  requirements.txt  train_qwen_vl.py
poi-brain/scripts/: bootstrap_data.py
types/: index.ts
(+17 files in other folders)
